include/bison_c.h

/**
 * @brief Hash type used for pre-hashed names in the C API.
 *
 * Values are produced by `bison_key()` and consumed by APIs that accept
 * hashed class identifiers and field names.
 */
typedef uint32_t bison_hash;
/* ═══════════════════════════════════════════════════════════════════════════
 * Utility
 * ═════════════════════════════════════════════════════════════════════════ */

/**
 * @brief Compute the FNV-1a hash of a null-terminated string.
 *
 * This is the same hash function used internally by the C++ `"name"_key`
 * literal and `bdg::bison::hash()`.  Use it to prepare keys for functions that
 * accept pre-hashed `bison_hash` names (e.g. `bison_create`,
 * `bison_add_class`).
 *
 * @param name  Null-terminated string.
 * @return 32-bit FNV-1a hash with the high bit set.
 */
BISON_API bison_hash bison_key(const char* name);