bindings/python/bison/_native.py


    # ── Vector field access ─────────────────────────────────────────────────
    lib.bison_get_vector_bool.restype = Error
    lib.bison_get_vector_bool.argtypes = [Handle, Hash, P(ctypes.c_int), ctypes.c_size_t, P(ctypes.c_size_t)]
    lib.bison_get_vector_int.restype = Error
    lib.bison_get_vector_int.argtypes = [Handle, Hash, P(ctypes.c_int32), ctypes.c_size_t, P(ctypes.c_size_t)]
    lib.bison_get_vector_float.restype = Error
    lib.bison_get_vector_float.argtypes = [Handle, Hash, P(ctypes.c_float), ctypes.c_size_t, P(ctypes.c_size_t)]
    lib.bison_get_vector_bytes.restype = Error
    lib.bison_get_vector_bytes.argtypes = [Handle, Hash, P(ctypes.c_uint8), ctypes.c_size_t, P(ctypes.c_size_t)]

    lib.bison_set_vector_bool.restype = Error
    lib.bison_set_vector_bool.argtypes = [Handle, Hash, P(ctypes.c_int), ctypes.c_size_t]
    lib.bison_set_vector_int.restype = Error
    lib.bison_set_vector_int.argtypes = [Handle, Hash, P(ctypes.c_int32), ctypes.c_size_t]
    lib.bison_set_vector_float.restype = Error
    lib.bison_set_vector_float.argtypes = [Handle, Hash, P(ctypes.c_float), ctypes.c_size_t]
    lib.bison_set_vector_bytes.restype = Error
    lib.bison_set_vector_bytes.argtypes = [Handle, Hash, P(ctypes.c_uint8), ctypes.c_size_t]

    # ── Binary serialization ────────────────────────────────────────────────
    lib.bison_serialize.restype = Error
    lib.bison_serialize.argtypes = [Handle, P(P(ctypes.c_uint8)), P(ctypes.c_size_t)]
    lib.bison_deserialize.restype = Error
    lib.bison_deserialize.argtypes = [P(ctypes.c_uint8), ctypes.c_size_t, P(Handle)]
    lib.bison_free_buffer.restype = None
    lib.bison_free_buffer.argtypes = [P(ctypes.c_uint8)]

    # ── Utility ──────────────────────────────────────────────────────────────
    lib.bison_key.restype = Hash
    lib.bison_key.argtypes = [ctypes.c_char_p]

    # ── rmi_c.h: futures ─────────────────────────────────────────────────────
    lib.rmi_future_wait.restype = Error
    lib.rmi_future_wait.argtypes = [FutureHandle, ctypes.c_int64]

    lib.rmi_future_get_dynamic.restype = Error
    lib.rmi_future_get_dynamic.argtypes = [P(FutureHandle), P(Handle)]

    lib.rmi_future_get_proxy.restype = Error
    lib.rmi_future_get_proxy.argtypes = [P(FutureHandle), P(ProxyHandle)]

    lib.rmi_future_release.restype = None
    lib.rmi_future_release.argtypes = [FutureHandle]

    # ── rmi_c.h: client ──────────────────────────────────────────────────────
    lib.rmi_client_tcp_create.restype = ClientHandle
    lib.rmi_client_tcp_create.argtypes = [ctypes.c_char_p, ctypes.c_uint16]

    lib.rmi_client_pipe_create.restype = ClientHandle
    lib.rmi_client_pipe_create.argtypes = [ctypes.c_char_p]

    lib.rmi_client_term_create.restype = ClientHandle
    lib.rmi_client_term_create.argtypes = []

    lib.rmi_standalone_create.restype = ClientHandle
    lib.rmi_standalone_create.argtypes = []

    lib.rmi_client_connect.restype = Error
    lib.rmi_client_connect.argtypes = [ClientHandle, Handle]

    lib.rmi_client_describe.restype = Error
    lib.rmi_client_describe.argtypes = [ClientHandle, Hash, Hash, P(Handle)]

    lib.rmi_client_describe_async.restype = Error
    lib.rmi_client_describe_async.argtypes = [ClientHandle, Hash, Hash, P(FutureHandle)]

    lib.rmi_client_instantiate.restype = Error
    lib.rmi_client_instantiate.argtypes = [ClientHandle, Hash, Hash, Handle, P(ProxyHandle)]

    lib.rmi_client_instantiate_async.restype = Error
    lib.rmi_client_instantiate_async.argtypes = [ClientHandle, Hash, Hash, Handle, P(FutureHandle)]

    lib.rmi_client_disconnect.restype = Error
    lib.rmi_client_disconnect.argtypes = [ClientHandle]

    lib.rmi_client_release.restype = None
    lib.rmi_client_release.argtypes = [ClientHandle]

    # ── rmi_c.h: proxy ───────────────────────────────────────────────────────
    lib.rmi_proxy_release.restype = None
    lib.rmi_proxy_release.argtypes = [ProxyHandle]

    lib.rmi_proxy_on_event.restype = Error
    lib.rmi_proxy_on_event.argtypes = [ProxyHandle, Hash, ProxyEventFn, ctypes.c_void_p]

    lib.rmi_proxy_clear.restype = Error
    lib.rmi_proxy_clear.argtypes = [ProxyHandle, ctypes.c_int64]

    lib.rmi_proxy_clear_async.restype = Error
    lib.rmi_proxy_clear_async.argtypes = [ProxyHandle, P(FutureHandle)]

    lib.rmi_proxy_set.restype = Error
    lib.rmi_proxy_set.argtypes = [ProxyHandle, Handle, ctypes.c_int64]

    lib.rmi_proxy_set_async.restype = Error
    lib.rmi_proxy_set_async.argtypes = [ProxyHandle, Handle, P(FutureHandle)]

    lib.rmi_proxy_get.restype = Error
    lib.rmi_proxy_get.argtypes = [ProxyHandle, Handle, P(Handle), ctypes.c_int64]

    lib.rmi_proxy_get_async.restype = Error
    lib.rmi_proxy_get_async.argtypes = [ProxyHandle, Handle, P(FutureHandle)]

    lib.rmi_proxy_call.restype = Error
    lib.rmi_proxy_call.argtypes = [ProxyHandle, Hash, Handle, P(Handle), ctypes.c_int64]

    lib.rmi_proxy_call_async.restype = Error
    lib.rmi_proxy_call_async.argtypes = [ProxyHandle, Hash, Handle, P(FutureHandle)]

    # ── rmi_c.h: server ──────────────────────────────────────────────────────
    lib.rmi_server_tcp_create.restype = ServerHandle
    lib.rmi_server_tcp_create.argtypes = [ctypes.c_char_p, ctypes.c_uint16]

    lib.rmi_server_pipe_create.restype = ServerHandle
    lib.rmi_server_pipe_create.argtypes = [ctypes.c_char_p]

    lib.rmi_server_term_create.restype = ServerHandle
    lib.rmi_server_term_create.argtypes = [ctypes.c_char_p]

    lib.rmi_server_listen.restype = Error
    lib.rmi_server_listen.argtypes = [ServerHandle, Handle]

    lib.rmi_server_set_auth.restype = Error
    lib.rmi_server_set_auth.argtypes = [ServerHandle, AuthFn, ctypes.c_void_p]

    lib.rmi_server_stop.restype = None
    lib.rmi_server_stop.argtypes = [ServerHandle]

    lib.rmi_server_release.restype = None
    lib.rmi_server_release.argtypes = [ServerHandle]
